Crash after transforming curve in edit mode #79782

Closed
opened 2020-08-14 16:27:47 +02:00 by Julien Kaspar · 20 comments
Member

System Information
Operating system: Linux-5.4.0-42-generic-x86_64-with-debian-bullseye-sid 64 Bits
Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.100

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-14 14:00, hash: d117520aa2
Worked: 7c380119a7
Caused by 186abf7d3b

Short description of error
When using any way of transforming curve handles on a newly created curve object it immediately crashes afterwards.
Interestingly it doesn't happen if the curve is being extruded to have more handles than the original 2.

**System Information** Operating system: Linux-5.4.0-42-generic-x86_64-with-debian-bullseye-sid 64 Bits Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.100 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-14 14:00, hash: `d117520aa2` Worked: 7c380119a708 Caused by 186abf7d3b **Short description of error** When using any way of transforming curve handles on a newly created curve object it immediately crashes afterwards. Interestingly it doesn't happen if the curve is being extruded to have more handles than the original 2.
Author
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar

#79852 was marked as duplicate of this issue

#79852 was marked as duplicate of this issue

#79865 was marked as duplicate of this issue

#79865 was marked as duplicate of this issue

#79867 was marked as duplicate of this issue

#79867 was marked as duplicate of this issue
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm this. I'll bisect too, thanks for the short window of time when it worked last.

I can confirm this. I'll bisect too, thanks for the short window of time when it worked last.
Member

Added subscriber: @fclem

Added subscriber: @fclem
Member

Bisecting narrowed the commit down to 186abf7d3b. I'm not exactly sure how that change is related to curves, but it makes sense that that sort of change is risky.

@fclem This may be for you.

Bisecting narrowed the commit down to 186abf7d3bab9ed8b905c6914de02427bb2547cf. I'm not exactly sure how that change is related to curves, but it makes sense that that sort of change is risky. @fclem This may be for you.

Added subscriber: @antoniov

Added subscriber: @antoniov

Confirmed. Crash in gl_drawlist.cc

image.png

Confirmed. Crash in `gl_drawlist.cc` ![image.png](https://archive.blender.org/developer/F8780866/image.png)
Clément Foucault was assigned by Dalai Felinto 2020-08-17 17:11:26 +02:00
Member

Pretty sure it was a mistake to add this to 2.90, the crash is caused by a commit that is only in master.

Pretty sure it was a mistake to add this to 2.90, the crash is caused by a commit that is only in master.
Member

Added subscriber: @MarceloGomez

Added subscriber: @MarceloGomez
Member

Added subscriber: @BrianRandall

Added subscriber: @BrianRandall
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

#79852 (Crash canceling an extrude on a nurbscurve (without normals overlay)) might be related (I can only reproduce if normals overlay is not showing...)

#79852 (Crash canceling an extrude on a nurbscurve (without normals overlay)) might be related (I can only reproduce if normals overlay is not showing...)

@lichtwerk I get the crash transforming a simple Bezier with handles ON or OFF.

@lichtwerk I get the crash transforming a simple Bezier with handles ON or OFF.

This issue was referenced by fe1827df82

This issue was referenced by fe1827df821cdba2d66b03c0f3366e8df3c2fe76

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Thomas Dinges added this to the 2.91 milestone 2023-02-08 16:20:48 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79782
No description provided.