Fix T79782 GPU: Crash cause by shadow batch reference

After drawing, the batch could be reset and draw again using other
parameters.

Avoid having to track references by setting the batch pointer to NULL after
drawing.